# mutual-watchdog

./: .env.example  .gitignore  LICENSE  Makefile  README.md
esp32/: .env.example  Cargo.toml  build.rs  sdkconfig.defaults
esp32/.cargo/: config.toml
esp32/src/: main.rs
